# wui

./: Cargo.toml  go.mod  go.sum  main.go
api/: api.go
api/open_weather_map/: client.go
api/radar/: model.go
src/: api.rs  main.rs
src/api/: geocoder.rs  open_weather_map.rs
